Changed authorization to django-allauth

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = "*"
 django-crispy-forms = "*"
 django-markdownx = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.6"
