Added coauthor feature to posts

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 django-crispy-forms = "*"
 django-markdownx = "*"
 django-allauth = "*"
+django-multiselectfield = "*"
 
 [requires]
 python_version = "3.6"
